Specify sampling based on frequency and count.
- No longer use interval and duration. This was more confusing!

 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   flow-config.cfg
	modified:   sass.py
	modified:   sassrig/SassScope.py

--- a/flow-config.cfg
+++ b/flow-config.cfg
@@ -9,8 +9,8 @@ TARGET_PORT_BAUD = 19200
 TARGET_PORT_NAME = /dev/ttyUSB2
 
 #
-# Time in seconds between samples
-SAMPLE_INTERVAL  = 2.5e-9
+# Number of samples taken per second
+SAMPLE_FREQUENCY = 125e6
 
 #
 # The number of samples to take per trace.
@@ -18,7 +18,7 @@ SAMPLE_COUNT     = 34000
 
 #
 # How many traces to take
-TRACE_COUNT      = 500
+TRACE_COUNT      = 10000
 
 #
 # Show a window of the trace waveform after each capture?
