Update the voltage range to measure over.
 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   flow-config.cfg
	modified:   sass.py
	modified:   sassrig/SassComms.py
	modified:   sassrig/SassScope.py
	modified:   sassrig/SassStorage.py

--- a/flow-config.cfg
+++ b/flow-config.cfg
@@ -17,6 +17,10 @@ SAMPLE_FREQUENCY = 125e6
 SAMPLE_COUNT     = 34000
 
 #
+# Voltage range to measure over.
+SAMPLE_RANGE     = 10e-3
+
+#
 # How many traces to take
 TRACE_COUNT      = 10000
 
