--- a/flow-config.cfg
+++ b/flow-config.cfg
@@ -6,7 +6,7 @@ TARGET_PORT_BAUD = 19200
 
 #
 # COM/TTY port name of the target UART modem.
-TARGET_PORT_NAME = /dev/ttyUSB2
+TARGET_PORT_NAME = /dev/ttyUSB0
 
 #
 # Number of samples taken per second
@@ -18,7 +18,7 @@ SAMPLE_COUNT     = 34000
 
 #
 # Voltage range to measure over.
-SAMPLE_RANGE     = 20e-3
+SAMPLE_RANGE     = 50e-3
 
 #
 # How many traces to take
@@ -35,7 +35,7 @@ KEY              = random
 
 #
 # Whether to dump the captured traces to a CSV file, and if so, where to.
-DUMP_CSV         = True
+DUMP_CSV         = False
 DUMP_CSV_FILE    = ./work/traces.csv
 
 
