Make sure all class members have API docs generated for them.
 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   docs/sphinx/Makefile

--- a/docs/sphinx/Makefile
+++ b/docs/sphinx/Makefile
@@ -16,8 +16,12 @@ help:
 .PHONY: help Makefile apidocs
 
 apidocs:
-	sphinx-apidoc -f -o "$(SOURCEDIR)" -e -a "$(LIB_PATH)"
+	sphinx-apidoc -P -f -o "$(SOURCEDIR)" -e -a "$(LIB_PATH)"
 	cp ./index.rst $(SOURCEDIR)/index.rst
+	sed -i "s/:members:/:members:\n    :inherited-members:/" \
+        $(SOURCEDIR)/*.rst
+	sed -i "s/:members:/:members:\n    :private-members:/" \
+        $(SOURCEDIR)/*.rst
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
